--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,10 +1,56 @@
 @import 'setup';
 
-.container {
-	max-width: 900px;
+body {
+	font-family: 'Raleway', sans-serif;
+}
+
+.wrapper {
+	width: 1040px;
 	margin: 0 auto;
 }
 
-body {
-	background: bisque;
+header {
+	background-image: url(../images/hero.jpg);
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	text-align: center;
+	display: flex;
+	justify-content: center;
 }
+
+.headerContainer {
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+h1 {
+	font-weight: 300;
+	font-size: 22px;
+}
+
+select {
+	width: 50%;
+}
+
+.top {
+	display: flex;
+}
+
+.parkInfo, .weather {
+	width: 50%;
+	height: 400px;
+}
+
+.map {
+	width: 100%;
+	height: 500px;
+}
+
+// .parkInfo, .weather, .map {
+// 	border: 1px black solid;
+// }
+
