--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -131,9 +131,58 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-.container {
-  max-width: 900px;
+body {
+  font-family: 'Raleway', sans-serif; }
+
+.wrapper {
+  width: 1040px;
   margin: 0 auto; }
 
-body {
-  background: bisque; }
+header {
+  background-image: url(../images/hero.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.headerContainer {
+  width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+h1 {
+  font-weight: 300;
+  font-size: 22px; }
+
+select {
+  width: 50%; }
+
+.top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.parkInfo, .weather {
+  width: 50%;
+  height: 400px; }
+
+.map {
+  width: 100%;
+  height: 500px; }
